try to fix image stretch

--- a/main.css
+++ b/main.css
@@ -733,6 +733,7 @@ div.section {
 
 .full.caseStudyImg {
 	width: 100%;
+	height: 100%;
 }
 
 .half.caseStudyImg {
